fixed spacing in process

--- a/css/main_v1.2.css
+++ b/css/main_v1.2.css
@@ -972,6 +972,7 @@ footer a:hover {
     height: auto;
     margin-right: 60px;
     flex-basis: 10%;
+    padding-left: 18px;
 }
 
 .process_text {
